fixed firefox layout issue for BigBluff

--- a/public/stylesheets/BigBluff.css
+++ b/public/stylesheets/BigBluff.css
@@ -9,6 +9,10 @@
 	margin-right: 15px;
 }
 
+#images-div {
+	float: left;
+}
+
 #images-div img {
 	float: center;
 	margin-top: 15px;
